# Notable

./: Cargo.toml  README.md
notable-cli/: Cargo.toml
notable-cli/src/: main.rs  tree_printer.rs
notable-lsp/: Cargo.toml
notable-vault/: Cargo.toml
notable-vault/src/: config.rs  index.rs  lib.rs  notebook.rs  tasks.rs  vault.rs
