[package]
name = "notable-cli"
autobin = false
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive", "string"] }
edit = "0.1.5"
fuzzydate = "0.2.2"
notable-vault = { version = "0.1.0", path = "../notable-vault" }

[[bin]]
name = "notable"
path = "src/main.rs"

